force-app/main/default/objects/Funding_Batch__c/Funding_Batch__c.object-meta.xml
<CustomObject>
    <label>Funding Batch</label>
    <nameField>
        <label>Funding Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>