force-app/main/default/objects/Funding_Batch__c/fields/Funding_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Funding_Batch_Number__c</fullName>
    <description>Unique reference number for funding batch</description>
    <displayFormat>B-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Funding Batch Number</label>
    <type>AutoNumber</type>
</CustomField>