force-app/main/default/objects/Funding_Batch__c/fields/Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Released_Date__c</fullName>
    <label>Released Date</label>
    <type>DateTime</type>
</CustomField>