force-app/main/default/objects/Funding_Batch__c/fields/Total_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_Amount__c</fullName>
    <description>Total Funding Amount</description>
    <inlineHelpText>Total Funding Amount</inlineHelpText>
    <label>Total Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>