force-app/main/default/objects/Funding_Batch__c/fields/Total_Manual_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Manual_Funding_Amount__c</fullName>
    <description>Total Manual Funding Amount</description>
    <inlineHelpText>Total Manual Funding Amount</inlineHelpText>
    <label>Total Manual Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>